--- a/src/main/webapp/pages/VendorApplication/VendorApplication.html
+++ b/src/main/webapp/pages/VendorApplication/VendorApplication.html
@@ -12,10 +12,12 @@
                             <wm-layoutgrid columns="3" name="layoutgrid3">
                                 <wm-gridrow name="gridrow24">
                                     <wm-gridcolumn columnwidth="4" name="gridcolumn24">
-                                        <wm-form-field name="companyName" displayname="Company Name" show="true" primary-key="false" generator="assigned" key="companyName" type="string" widget="text" maxchars="255" inputtype="text" placeholder="Enter value"></wm-form-field>
+                                        <wm-form-field name="companyName" displayname="Company Name" show="true" primary-key="false" generator="assigned" key="companyName" type="string" required="required" widget="text" maxchars="255" inputtype="text" placeholder="Enter value"
+                                        validationmessage="Company Name is required"></wm-form-field>
                                     </wm-gridcolumn>
                                     <wm-gridcolumn columnwidth="4" name="gridcolumn25">
-                                        <wm-form-field name="address1" displayname="Address1" show="true" primary-key="false" generator="assigned" key="address1" type="string" widget="text" maxchars="255" inputtype="text" placeholder="Enter value"></wm-form-field>
+                                        <wm-form-field name="address1" displayname="Address1" show="true" primary-key="false" generator="assigned" key="address1" type="string" required="required" widget="text" maxchars="255" inputtype="text" placeholder="Enter value"
+                                        validationmessage="Address1 is required"></wm-form-field>
                                     </wm-gridcolumn>
                                     <wm-gridcolumn columnwidth="4" name="gridcolumn26">
                                         <wm-form-field name="address2" displayname="Address2" show="true" primary-key="false" generator="assigned" key="address2" type="string" widget="text" maxchars="255" inputtype="text" placeholder="Enter value"></wm-form-field>
@@ -23,21 +25,24 @@
                                 </wm-gridrow>
                                 <wm-gridrow name="gridrow25">
                                     <wm-gridcolumn columnwidth="4" name="gridcolumn27">
-                                        <wm-form-field name="city" displayname="City" show="true" primary-key="false" generator="assigned" key="city" type="string" widget="text" maxchars="255" inputtype="text" placeholder="Enter value"></wm-form-field>
+                                        <wm-form-field name="city" displayname="City" show="true" primary-key="false" generator="assigned" key="city" type="string" required="required" widget="text" maxchars="255" inputtype="text" placeholder="Enter value"
+                                        validationmessage="City is required"></wm-form-field>
                                     </wm-gridcolumn>
                                     <wm-gridcolumn columnwidth="4" name="gridcolumn28">
-                                        <wm-form-field name="country" displayname="Country" show="true" primary-key="false" generator="assigned" key="country" type="string" widget="text" maxchars="255" inputtype="text" placeholder="Enter value"></wm-form-field>
+                                        <wm-form-field name="states" displayname="State" show="true" primary-key="false" generator="assigned" key="states" type="list" is-related="true" required="required" widget="select" placeholder="Select value" displayexpression="stateName"
+                                        orderby="stateName:asc" validationmessage="State is required"></wm-form-field>
                                     </wm-gridcolumn>
                                     <wm-gridcolumn columnwidth="4" name="gridcolumn29">
-                                        <wm-form-field name="postalCode" displayname="Postal Code" show="true" primary-key="false" generator="assigned" key="postalCode" type="string" widget="text" maxchars="255" inputtype="text" placeholder="Enter value"></wm-form-field>
+                                        <wm-form-field name="postalCode" displayname="Postal Code" show="true" primary-key="false" generator="assigned" key="postalCode" type="string" required="required" widget="text" maxchars="255" inputtype="text" placeholder="Enter value"></wm-form-field>
                                     </wm-gridcolumn>
                                 </wm-gridrow>
                                 <wm-gridrow name="gridrow26">
                                     <wm-gridcolumn columnwidth="4" name="gridcolumn45">
-                                        <wm-form-field name="states" displayname="State" show="true" primary-key="false" generator="assigned" key="states" type="list" is-related="true" widget="select" placeholder="Select value" displayexpression="stateName"></wm-form-field>
+                                        <wm-form-field name="country" displayname="Country" show="true" primary-key="false" generator="assigned" key="country" type="string" widget="text" maxchars="255" inputtype="text" placeholder="Enter value"></wm-form-field>
                                     </wm-gridcolumn>
                                     <wm-gridcolumn columnwidth="4" name="gridcolumn31">
-                                        <wm-form-field name="companyPhone" displayname="Company Phone" show="true" primary-key="false" generator="assigned" key="companyPhone" type="string" widget="text" maxchars="255" inputtype="text" placeholder="Enter value"></wm-form-field>
+                                        <wm-form-field name="companyPhone" displayname="Company Phone" show="true" primary-key="false" generator="assigned" key="companyPhone" type="string" required="required" widget="text" maxchars="255" inputtype="text"
+                                        placeholder="Enter value" validationmessage="Company phone is required"></wm-form-field>
                                     </wm-gridcolumn>
                                     <wm-gridcolumn columnwidth="4" name="gridcolumn32">
                                         <wm-form-field name="altPhone" displayname="Alt Phone" show="true" primary-key="false" generator="assigned" key="altPhone" type="string" widget="text" maxchars="255" inputtype="text" placeholder="Enter value"></wm-form-field>
@@ -45,7 +50,8 @@
                                 </wm-gridrow>
                                 <wm-gridrow name="gridrow27">
                                     <wm-gridcolumn columnwidth="4" name="gridcolumn33">
-                                        <wm-form-field name="companyEmail" displayname="Company Email" show="true" primary-key="false" generator="assigned" key="companyEmail" type="string" widget="text" maxchars="255" inputtype="text" placeholder="Enter value"></wm-form-field>
+                                        <wm-form-field name="companyEmail" displayname="Company Email" show="true" primary-key="false" generator="assigned" key="companyEmail" type="string" required="required" widget="text" maxchars="255" inputtype="text"
+                                        placeholder="Enter value" validationmessage="Company Email is required"></wm-form-field>
                                     </wm-gridcolumn>
                                     <wm-gridcolumn columnwidth="4" name="gridcolumn34">
                                         <wm-form-field name="companyWebsite" displayname="Company Website" show="true" primary-key="false" generator="assigned" key="companyWebsite" type="string" widget="text" maxchars="255" inputtype="text" placeholder="Enter value"></wm-form-field>
@@ -60,26 +66,30 @@
                                         placeholder="Enter value"></wm-form-field>
                                     </wm-gridcolumn>
                                     <wm-gridcolumn columnwidth="4" name="gridcolumn37">
-                                        <wm-form-field name="stateRegNumber" displayname="State Reg Number" show="true" primary-key="false" generator="assigned" key="stateRegNumber" type="string" widget="text" maxchars="255" inputtype="text" placeholder="Enter value"></wm-form-field>
+                                        <wm-form-field name="stateRegNumber" displayname="State Registration Number" show="true" primary-key="false" generator="assigned" key="stateRegNumber" type="string" widget="text" maxchars="255" inputtype="text" placeholder="Enter value"></wm-form-field>
                                     </wm-gridcolumn>
                                     <wm-gridcolumn columnwidth="4" name="gridcolumn38">
-                                        <wm-form-field name="numberOfEmployees" displayname="Number Of Employees" show="true" primary-key="false" generator="assigned" key="numberOfEmployees" type="integer" step="0" widget="number" inputtype="number" placeholder="Enter value"></wm-form-field>
+                                        <wm-form-field name="numberOfEmployees" displayname="Number Of Employees" show="true" primary-key="false" generator="assigned" key="numberOfEmployees" type="integer" step="0" widget="number" inputtype="number" placeholder="Enter value"
+                                        required="true" validationmessage="Number of employees required"></wm-form-field>
                                     </wm-gridcolumn>
                                 </wm-gridrow>
                                 <wm-gridrow name="gridrow29">
                                     <wm-gridcolumn columnwidth="4" name="gridcolumn39">
-                                        <wm-form-field name="feinNumber" displayname="Fein Number" show="true" primary-key="false" generator="assigned" key="feinNumber" type="string" widget="text" maxchars="255" inputtype="text" placeholder="Enter value"></wm-form-field>
+                                        <wm-form-field name="feinNumber" displayname="FEIN Number" show="true" primary-key="false" generator="assigned" key="feinNumber" type="string" widget="text" maxchars="255" inputtype="text" placeholder="Enter value"
+                                        required="true" validationmessage="FEIN or SSN Required"></wm-form-field>
                                     </wm-gridcolumn>
                                     <wm-gridcolumn columnwidth="4" name="gridcolumn40">
-                                        <wm-form-field name="coi" displayname="Coi" show="true" primary-key="false" generator="assigned" key="coi" type="blob" widget="upload" maxchars="255"></wm-form-field>
+                                        <wm-form-field name="coi" displayname="Certificate of Insurance" show="true" primary-key="false" generator="assigned" key="coi" type="blob" required="required" widget="upload" maxchars="255"></wm-form-field>
                                     </wm-gridcolumn>
                                     <wm-gridcolumn columnwidth="4" name="gridcolumn41">
-                                        <wm-form-field name="insuranceCompany" displayname="Insurance Company" show="true" primary-key="false" generator="assigned" key="insuranceCompany" type="string" widget="text" maxchars="255" inputtype="text" placeholder="Enter value"></wm-form-field>
+                                        <wm-form-field name="insuranceCompany" displayname="Insurance Company" show="true" primary-key="false" generator="assigned" key="insuranceCompany" type="string" widget="text" maxchars="255" inputtype="text" placeholder="Enter value"
+                                        required="true" validationmessage="Insurance Company Is Required"></wm-form-field>
                                     </wm-gridcolumn>
                                 </wm-gridrow>
                                 <wm-gridrow name="gridrow30">
                                     <wm-gridcolumn columnwidth="4" name="gridcolumn42">
-                                        <wm-form-field name="insuranceExpires" displayname="Insurance Expires" show="true" primary-key="false" generator="assigned" key="insuranceExpires" type="date" widget="date" placeholder="Select date" outputformat="yyyy-MM-dd"></wm-form-field>
+                                        <wm-form-field name="insuranceExpires" displayname="Insurance Expires Date" show="true" primary-key="false" generator="assigned" key="insuranceExpires" type="date" widget="date" placeholder="Select date" outputformat="MM-dd-yyyy"
+                                        required="true" validationmessage="Insurance expiration date required" datepattern="MM-dd-yyyy"></wm-form-field>
                                     </wm-gridcolumn>
                                     <wm-gridcolumn columnwidth="4" name="gridcolumn44">
                                         <wm-form-field name="contractorTypes" displayname="Contractor Types" show="true" primary-key="false" generator="assigned" key="contractorTypes" type="list" is-related="true" widget="select" placeholder="Select value"
@@ -89,10 +99,8 @@
                                         <wm-form-field name="faxNumber" displayname="Fax Number" show="true" primary-key="false" generator="assigned" key="faxNumber" type="string" widget="text" maxchars="255" inputtype="text" placeholder="Enter value"></wm-form-field>
                                     </wm-gridcolumn>
                                 </wm-gridrow>
-                                <wm-gridcolumn columnwidth="4" name="gridcolumn43">
-                                    <wm-form-field name="lastUpdated" displayname="Last Updated" show="false" primary-key="false" generator="assigned" key="lastUpdated" type="date" widget="date" placeholder="Select date" outputformat="yyyy-MM-dd" defaultvalue="CURRENT_DATE"></wm-form-field>
-                                </wm-gridcolumn>
                             </wm-layoutgrid>
+                            <wm-form-field name="lastUpdated" displayname="Last Updated" show="false" primary-key="false" generator="assigned" key="lastUpdated" type="date" widget="date" placeholder="Select date" outputformat="yyyy-MM-dd" defaultvalue="CURRENT_DATE"></wm-form-field>
                             <wm-form-action key="reset" display-name="Reset" show="true" class="form-reset btn-secondary" iconclass="wi wi-refresh" title="Reset" action="reset()" disabled="false" type="button" update-mode="true"></wm-form-action>
                             <wm-form-action key="save" display-name="Save" show="true" class="form-save btn-success" iconclass="wi wi-save" title="Save" disabled="false" type="submit" update-mode="true"></wm-form-action>
                         </wm-liveform>
