--- a/src/main/webapp/pages/VendorApplication/VendorApplication.html
+++ b/src/main/webapp/pages/VendorApplication/VendorApplication.html
@@ -9,6 +9,7 @@
                     <wm-gridcolumn columnwidth="12" name="gridcolumn1">
                         <wm-liveform novalidate="false" errormessage="" title="CivicXpress Vendor Application" iconclass="wi wi-edit" defaultmode="Edit" dataset="bind:Variables.VendorData.dataSet" captionalign="left" captionposition="top" name="liveformVendorApplication"
                         class="panel-primary">
+                            <wm-label padding="unset 0.5em" name="lblInstructions" caption="If you would like your company made available to be selected on new forms please complete the following application.  You may then submit this application to multiple municipalities to be included in their &quot;Approved Vendors&quot; lists."></wm-label>
                             <wm-layoutgrid columns="3" name="layoutgrid3">
                                 <wm-gridrow name="gridrow24">
                                     <wm-gridcolumn columnwidth="4" name="gridcolumn24">
