--- a/src/main/webapp/pages/VendorApplication/VendorApplication.html
+++ b/src/main/webapp/pages/VendorApplication/VendorApplication.html
@@ -71,7 +71,7 @@
                                     </wm-gridcolumn>
                                     <wm-gridcolumn columnwidth="4" name="gridcolumn38">
                                         <wm-form-field name="numberOfEmployees" displayname="Number Of Employees" show="true" primary-key="false" generator="assigned" key="numberOfEmployees" type="integer" step="0" widget="number" inputtype="number" placeholder="Enter value"
-                                        required="true" validationmessage="Number of employees required"></wm-form-field>
+                                        required="true" validationmessage="Number of employees required" minvalue="1"></wm-form-field>
                                     </wm-gridcolumn>
                                 </wm-gridrow>
                                 <wm-gridrow name="gridrow29">
