New files added - [] Files modified - [VendorApplication.html,Login.html] Refactored files - [] Fixed bugs - [] Removed files - []

--- a/src/main/webapp/pages/VendorApplication/VendorApplication.html
+++ b/src/main/webapp/pages/VendorApplication/VendorApplication.html
@@ -90,7 +90,7 @@
                                 <wm-gridrow name="gridrow30">
                                     <wm-gridcolumn columnwidth="4" name="gridcolumn42">
                                         <wm-form-field name="insuranceExpires" displayname="Insurance Expires Date" show="true" primary-key="false" generator="assigned" key="insuranceExpires" type="date" widget="date" placeholder="Select date" outputformat="MM-dd-yyyy"
-                                        required="true" validationmessage="Insurance expiration date required" datepattern="MM-dd-yyyy"></wm-form-field>
+                                        required="true" validationmessage="Insurance expiration date required" datepattern="MM-dd-yyyy" defaultvalue="CURRENT_DATE"></wm-form-field>
                                     </wm-gridcolumn>
                                     <wm-gridcolumn columnwidth="4" name="gridcolumn44">
                                         <wm-form-field name="contractorTypes" displayname="Contractor Types" show="true" primary-key="false" generator="assigned" key="contractorTypes" type="list" is-related="true" widget="select" placeholder="Select value"
