New files added - [] Files modified - [MunicipalityUsers.variables.json,MunicipalitySettings.html,Main.html,UserCreation.html,MunicipalityUsers.js,ManualFeeTypes.variables.json] Refactored files - [] Fixed bugs - [] Removed files - []

--- a/src/main/webapp/pages/MunicipalitySettings/MunicipalitySettings.html
+++ b/src/main/webapp/pages/MunicipalitySettings/MunicipalitySettings.html
@@ -137,6 +137,13 @@
                                     <wm-gridcolumn columnwidth="12" name="gridcolumn32">
                                         <wm-panel iconclass="wi wi-insert-emoticon" name="panel4" title="Municipality Logo">
                                             <wm-layoutgrid name="layoutgrid6">
+                                                <wm-gridrow name="gridrow38_1">
+                                                    <wm-gridcolumn columnwidth="2" name="gridcolumn48_1"></wm-gridcolumn>
+                                                    <wm-gridcolumn columnwidth="8" name="gridcolumn49_1" horizontalalign="center">
+                                                        <wm-picture name="picture1" picturesource="bind:&quot;services/cx2/Municipalities/&quot;+Variables.SelectedMunicipalityObj.firstRecord.id+&quot;/content/logo&quot;"></wm-picture>
+                                                    </wm-gridcolumn>
+                                                    <wm-gridcolumn columnwidth="2" name="gridcolumn50_1"></wm-gridcolumn>
+                                                </wm-gridrow>
                                                 <wm-gridrow name="gridrow41">
                                                     <wm-gridcolumn columnwidth="2" name="gridcolumn63"></wm-gridcolumn>
                                                     <wm-gridcolumn columnwidth="8" name="gridcolumn61" horizontalalign="center" padding="1em unset">
