--- a/src/main/webapp/pages/Main/Main.html
+++ b/src/main/webapp/pages/Main/Main.html
@@ -164,9 +164,10 @@
     </wm-content>
     <wm-footer name="footer" content="footer"></wm-footer>
     <wm-view class="dialog-view" name="view1">
-        <wm-dialog dialogtype="design-dialog" modal="true" title="NewForm" iconclass="wi wi-edit" name="dialog1">
+        <wm-dialog dialogtype="design-dialog" modal="true" title="New Form" iconclass="wi wi-edit" name="dialog1">
             <wm-dialogactions name="dialogactions1">
-                <wm-button class="btn-default" caption="Create" type="button" margin="unset 0.5em" name="buttonCreate" on-click="buttonCreateClick($event, $scope)"></wm-button>
+                <wm-button class="btn-default btn-primary" caption="Cancel" type="button" margin="unset 0.5em" name="buttonCancel" on-click="Widgets.dialog1.close()"></wm-button>
+                <wm-button class="btn-success" caption="Create" type="button" margin="unset 0.5em" name="buttonCreate" on-click="buttonCreateClick($event, $scope)"></wm-button>
             </wm-dialogactions>
             <wm-composite name="composite4_1" margin="1em unset 2em unset">
                 <wm-label class="col-md-3 control-label" caption="Select Municipality" name="label20" width="40%"></wm-label>
