--- a/src/main/webapp/pages/UserCreation/UserCreation.html
+++ b/src/main/webapp/pages/UserCreation/UserCreation.html
@@ -61,17 +61,18 @@
                 <wm-wizardstep name="wizardstep2" title="Municipalities">
                     <wm-layoutgrid name="layoutgrid4">
                         <wm-gridrow name="gridrow13">
-                            <wm-gridcolumn columnwidth="10" name="gridcolumn18_1">
+                            <wm-gridcolumn columnwidth="2" name="gridcolumn28_1"></wm-gridcolumn>
+                            <wm-gridcolumn columnwidth="7" name="gridcolumn18_1">
                                 <wm-composite name="composite5">
-                                    <wm-label class="col-md-3 control-label" name="label8" caption="Search Municipalities"></wm-label>
-                                    <wm-container class="col-md-9" name="container5">
+                                    <wm-label class="col-md-3 control-label" name="label8" caption="Search Municipalities" width="20%"></wm-label>
+                                    <wm-container class="col-md-9" name="container5" width="80%">
                                         <wm-search name="textSearchMunicipalities" placeholder="Start Typing" dataset="bind:Variables.GetMunicipalities.dataSet" searchkey="municipalityName" displaylabel="municipalityName" displayimagesrc="logo" datafield="All Fields"
-                                        on-submit="textSearchMunicipalitiesSubmit($event, $scope)" required="true"></wm-search>
+                                        on-submit="textSearchMunicipalitiesSubmit($event, $scope)" required="true" width="100%"></wm-search>
                                     </wm-container>
                                 </wm-composite>
                             </wm-gridcolumn>
-                            <wm-gridcolumn columnwidth="2" name="gridcolumn24">
-                                <wm-button class="btn-default" caption="Add Municipality" type="button" margin="unset 0.5em" name="ButtonAddMuncipalities" iconclass="wi wi-add" on-click="ButtonAddMuncipalitiesClick($event, $scope)" horizontalalign="left"></wm-button>
+                            <wm-gridcolumn columnwidth="3" name="gridcolumn24">
+                                <wm-button class="btn-default btn-primary" caption="Add Municipality" type="button" margin="unset 0.5em" name="ButtonAddMuncipalities" iconclass="wi wi-add" on-click="ButtonAddMuncipalitiesClick($event, $scope)" horizontalalign="left"></wm-button>
                             </wm-gridcolumn>
                         </wm-gridrow>
                         <wm-gridrow name="gridrow14">
